# our_home_parsing

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
our_home_parsing/: items.py  main.py  middlewares.py  pipelines.py  settings.py
our_home_parsing/spiders/: our_home_spider.py
